Fix cosmetic bugs (#265)
* fix cosmetic bugs

* fix font weight

* fix sidebar cutoff

* adjust proprotions

* add fa for copy icon and adjust community padding

* final changes

--- a/hugo/assets/sass/_base.scss
+++ b/hugo/assets/sass/_base.scss
@@ -10,6 +10,8 @@ body {
   background-color: #fff;
   color: $font-color;
   transition: all 0.5s;
+  overflow-x: hidden;
+  width: 100%;
 }
 .brandingColor {
   color: $color-highlight;
@@ -412,7 +414,54 @@ blockquote {
   }
 }
 
+li.td-sidebar-nav__section.without-child > label > a {
+  color: rgb(59,59,59);
+  font-weight: 400;
+
+  &:focus,
+  &:hover {
+    color: var(--bs-link-color);
+  }
+
+  &.active {
+    font-weight: $font-weight-bold;
+  }
+}
+
+.td-toc {
+  a {
+    font-weight: $font-weight-medium;
+  }
+}
+
+.main-content-container {
+  display: flex !important;
+}
+
+aside {
+  flex: 1 1 20% !important;
+  overflow-y: hidden;
+}
+
+main {
+  min-width: 50% !important;
+}
+
+aside.td-sidebar-toc {
+  min-width: 16% !important;
+}
+
 .td-sidebar-nav, .td-sidebar {
   height: auto !important;
   max-height: 100% !important;
+  padding-top: 5px !important;
+}
+
+.fa-copy::before {
+  font-family: "FontAwesome";
+  content: "\f0c5"; 
+}
+
+.fa-copy {
+  position: fixed !important;
 }
